--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
   <footer>
    <ul>
    <li><a href="mailto:barucho@gmail.com">email</a></li>
-   <li><a href="https://github.com/barucho">github.com/hankquinlan</a></li>
+   <li><a href="https://github.com/barucho">github.com/barucho</a></li>
    </ul>
   </footer>
   </body>
